--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script type="module" src="/@vite/client"></script>
+    <link rel="stylesheet" href="/src/index.css">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SRM Academia - An unofficial app for SRM University students" />
